delete some outdated stuff [ci skip]

--- a/doc/README
+++ b/doc/README
@@ -1,6 +1,8 @@
 Instructions for building the diagrams user manual
 ==================================================
 
+XXX this is completely out of date!  Do not read!
+
 Things you will need
 --------------------
 
