--- a/release/release.org
+++ b/release/release.org
@@ -18,11 +18,12 @@
     + [ ] make a pass over the whole thing & look for stuff to improve/update
     + [ ] mention & etc.
     + [ ] go through release notes for new material to add to manual
-  + [ ] improve tutorial
-    + [ ] convert tutorial to ReST format (like user manual)
+  + [-] improve tutorial
+    + [X] convert tutorial to ReST format (like user manual)
     + [ ] generate lhs from ReST format??
     + [ ] brainstorm ideas for a single example that we can work through
     + [ ] add trails + paths to the tutorial
+  + [ ] describe postscript backend in diagrams package docs (README, .cabal...)
   + [ ] add -core and -lib examples with diagrams-haddock
   + [X] close other tickets with 0.7 milestone
   + [X] bump versions and deps to 0.7
