--- a/release/release.org
+++ b/release/release.org
@@ -22,8 +22,8 @@
     + [X] convert tutorial to ReST format (like user manual)
   + [X] describe postscript backend in diagrams package docs (README, .cabal...)
   + [X] close other tickets with 0.7 milestone
-  + [ ] don't fill lines
-    + [ ] SVG
+  + [-] don't fill lines
+    + [X] SVG
     + [ ] postscript
   + [X] bump versions and deps to 0.7
     + [X] diagrams-core
@@ -56,27 +56,28 @@
   + [X] make sure wiki is up to date
     + [X] installation instructions
     + [X] contributing instructions
-  + [ ] test build:
-    - [ ] ghc 7.4.2
-    - [ ] ghc 7.6.1
+  + [-] test build:
+    - [X] ghc 7.4.2
+    - [X] ghc 7.6.1
     - [ ] ghc HEAD
-    - [ ] update tested-with fields
+    - [X] update tested-with fields
   + [ ] write announcement for blog + email
     + [ ] list major new features since 0.6
     + [ ] link to gallery (email)
     + [ ] include some examples (blog)
     + [ ] say where/how to get involved
   + [X] update LICENSE files/lists of contributors
-  + [-] add release date to all CHANGES files
-    + [ ] core
-    + [ ] lib
-    + [ ] cairo
-    + [ ] svg
+  + [X] add release date to all CHANGES files
+    + [X] core
+    + [X] lib
+    + [X] cairo
+    + [X] svg
     + [X] gtk
-    + [ ] postscript
-    + [ ] contrib
-    + [ ] builder
+    + [X] postscript
+    + [X] contrib
+    + [X] builder
     + [X] haddock
+    + [X] SVGFonts
   + [ ] add release date to releases.markdown
   + [ ] tag all with release version
   + [ ] publish new website
@@ -92,7 +93,7 @@
     + [ ] diagrams-builder
     + [X] diagrams-haddock
     + [ ] SVGFonts
-    + [ ] BlogLiterately-diagrams
+    + [X] BlogLiterately-diagrams
   + [ ] upload/send announcement
     + [ ] blog
     + [ ] email
