--- a/HCAR/diagrams-Bd.tex
+++ b/HCAR/diagrams-Bd.tex
@@ -2,7 +2,8 @@
 \begin{hcarentry}[updated]{diagrams}
 \report{Brent Yorgey}%05/13
 \status{active development}
-\participants{Daniel Bergey, Jan Bracker, Andy Gill, Chris Mears, Michael Sloan, Ryan Yates}
+\participants{Daniel Bergey, Jan Bracker, Daniil Frumin, Andy Gill, John Lato, Chris Mears, Jeff
+  Rosenbluth, Michael Sloan, Ryan Yates}
 \makeheader
 
 The diagrams framework provides an embedded domain-specific language
@@ -26,62 +27,50 @@ annotations, named subdiagrams, and more.
 
 \subsubsection*{What's new}
 
-Since the last HCAR edition, version 0.6 was released in December.
-New features in 0.6 include:
+Since the last HCAR edition, version 0.7 was released in August 2013.
+New features in 0.7 include:
 \begin{itemize}
-\item A new Haskell-native SVG backend now comes ``out of the
-  box''---making installation of diagrams far easier for many users,
-  since it no longer depends on any external libraries via the
-  FFI. There is also a new official Postscript backend.  The cairo
-  backend is still supported, but is no longer required to use
-  diagrams.
-\item ``Traces'', which give an easy way to find arbitrary points on
-  the boundary of a diagram (useful for, \emph{e.g.} drawing
-  connecting lines between diagrams).
-\end{itemize}
-
-Perhaps the most exciting news since the last HCAR edition is the
-release of the \texttt{diagrams-haddock} package, which enables
-embedding diagrams code directly in Haddock documentation, with images
-automatically compiled and inserted into the Haddock output.  This is
-an easy way to spruce up your documentation with declaratively
-constructed graphics.  \texttt{diagrams-haddock} is already in use
-in a few packages on Hackage, most notably \texttt{diagrams-contrib}.
-
-%**<img width=400 src="./diagrams-haddock.jpg">
-%*ignore
-\begin{center}
-\includegraphics[width=0.4\textwidth]{html/diagrams-haddock.jpg}
-\end{center}
-%*endignore
-
-In conjunction with \texttt{diagrams-haddock}, there have also been
-significant improvements to the underlying \texttt{diagrams-builder}
-package, which renders diagrams dynamically at run time.  The caching
-and conditional rebuilding of diagrams is now much smarter, so that it
-``does the right thing'' in most situations (rebuilding a diagram when
-it has changed, and avoiding a rebuild when it hasn't).  This
-directly improves the experience of using \texttt{diagrams-haddock} as
-well as \texttt{BlogLiterately-diagrams} (for writing blog posts with
-embedded diagrams) and \texttt{diagrams-latex} (for \LaTeX\ documents
-with embedded diagrams).
-
-There have been many improvements and changes to the core
-diagrams libraries as well, with an 0.7 release planned for the
-not-too-distant future. Features slated for the upcoming release
-include:
-\begin{itemize}
-\item A nice API for drawing arrows between arbitrary points or diagrams.
+\item A big refactoring of the way segments, trails, and paths are
+  represented; the new API is more powerful and semantically consistent.
+\item Functions to compute the curvature of path segments at a given point.
+\item Segment offsets (paths lying a constant distance away
+  from a given segment).  A fuller implementation with offsets for
+  entire trails will be in the upcoming 1.0 release.
+\item A generalized color API, allowing backends to use whatever color
+  space they want.
 \item Additions to the \texttt{diagrams-contrib} library, including a
   symmetric layout algorithm for binary trees, circle packing layout, a
   generalized turtle drawing interface, factorization diagrams, and
   iterated subset fractals.
-\item Computing the curvature of path segments at a given point.
-\item Generating paths as a constant offset from another path.
-\item A generalized color API, allowing backends to use whatever color
-  space they want.
 \item Many documentation improvements, using \texttt{diagrams-haddock}
   to  generate example images.
+\item Big improvements to \texttt{diagrams-builder}, including much
+  smarter rebuilding and \texttt{hsenv} support.
+\item Official support for the \texttt{SVGFonts} package, providing
+  Haskell-native code for handling font data and converting strings
+  into diagrams paths.
+\end{itemize}
+
+% %**<img width=400 src="./diagrams-haddock.jpg">
+% %*ignore
+% \begin{center}
+% \includegraphics[width=0.4\textwidth]{html/diagrams-haddock.jpg}
+% \end{center}
+% %*endignore
+
+There have been many improvements and changes to the core
+diagrams libraries as well.  A 1.0 release is planned for on or around
+November 20, to coincide with Brent's presentation at the New York
+Haskell Users' Group.  Features slated for the 1.0 release
+include:
+\begin{itemize}
+\item A nice API for drawing arrows between arbitrary points or diagrams.
+\item Convenient integration with the \texttt{lens} package.
+\item Path offsets and expansions: for example, the operation of
+  ``stroking'' a path can now be internalized within diagrams,
+  returning a closed path representing the outline of the stroke.
+\item Performance improvements: across-the-board improvements of
+  around 30\%, and more optimized SVG output.
 \end{itemize}
 
 %**<img width=350 src="./PythagoreanTree.png">
@@ -126,8 +115,7 @@ hang out in the \texttt{\#diagrams} IRC channel on freenode.
 \item \url{http://projects.haskell.org/diagrams/gallery.html}
 \item \url{http://haskell.org/haskellwiki/Diagrams}
 \item \url{http://github.com/diagrams}
-\item
-  \url{https://byorgey.wordpress.com/2012/08/28/creating-documents-with-embedded-diagrams/}
+\item \url{https://byorgey.wordpress.com/2012/08/28/creating-documents-with-embedded-diagrams/}
 \item \url{http://www.cis.upenn.edu/~byorgey/pub/monoid-pearl.pdf}
 \item \url{http://www.youtube.com/watch?v=X-8NCkD2vOw}
 \end{compactitem}
